--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="pl">
-    <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Personal webpage</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-    <link href="/css/fontawesome/css/fontawesome.css" rel="stylesheet">
-    <link href="/css/fontawesome/css/brands.css" rel="stylesheet">
-    <link href="/css/fontawesome/css/solid.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5a9664a5f1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <nav>
-            <i class="fa-regular fa-bars"></i>
+            <i class="fa-solid fa-bars"></i>
         </nav>
 
         <hgroup>
