--- a/index.html
+++ b/index.html
@@ -35,8 +35,32 @@
         <i class="fa-solid fa-angle-down"></i>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="card">
+        <h3>O mnie</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga numquam
+          odit molestiae, unde a cupiditate esse modi culpa eaque, libero beatae
+          commodi repellendus quia natus officiis, facilis nemo doloremque
+          accusamus. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Fugit commodi debitis totam consequatur iusto beatae porro rerum.
+          Pariatur cum est nam odit blanditiis amet hic atque, error alias
+          facilis fugit! Quod at doloremque a, explicabo quae sunt unde
+          corporis? Natus id aspernatur nihil officiis ea itaque saepe hic magni
+          non. Distinctio, ducimus illum mollitia atque perferendis enim magni
+          odio veritatis! Quo blanditiis beatae pariatur totam corrupti tempora
+          suscipit, facere at nesciunt vitae dolorum quasi obcaecati
+          reprehenderit consequuntur libero odit aut tempore adipisci ab.
+          Tenetur doloribus consectetur, eaque assumenda aperiam asperiores?
+        </p>
+      </div>
 
+      <div class="footer">
+        <h3>Kontakt:</h3>
+        e-mail: <a href="mailto:mateuszk91@op.pl">mateuszk91@op.pl</a> <br />
+        tel: <a href="tel:+48514736769">+48 514 736 769</a>
+      </div>
+    </main>
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 
     <script src="js/javascript.js"></script>
